--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ librechat.yml
 .env*
 my.secrets
 !**/.env.example
-!**/.env.test.example
+!**/.env.*.example
 cache.json
 api/data/
 owner.yml
@@ -122,3 +122,6 @@ helm/**/.values.yaml
 
 !/client/src/@types/i18next.d.ts
 
+# dev
+/.task
+/appdata
