--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "LibreChat",
+  "name": "one-ring",
   "version": "v0.7.8",
-  "description": "",
+  "description": "All-In-One AI Conversations with One Ring",
   "workspaces": [
     "api",
     "client",
     "packages/*"
   ],
   "scripts": {
+    "dev": "npm run build:packages && concurrently \"npm run backend:dev\" \"npm run frontend:dev\" --names \"API,UI\" --prefix-colors \"blue,green\"",
+    "dev:services": "docker compose -f docker-compose.dev.yml up -d",
+    "dev:stop": "docker compose -f docker-compose.dev.yml down",
+    "dev:full": "npm run dev:services && npm run dev",
+    "dev:check": "node scripts/check-services.js",
+    "dev:setup": "node scripts/setup-dev.js",
+    "build:packages": "npm run build:data-provider && npm run build:mcp && npm run build:data-schemas",
     "update": "node config/update.js",
     "add-balance": "node config/add-balance.js",
     "set-balance": "node config/set-balance.js",
     "list-balances": "node config/list-balances.js",
     "user-stats": "node config/user-stats.js",
-    "rebuild:package-lock": "node config/packages",
-    "reinstall": "node config/update.js -l -g",
-    "b:reinstall": "bun config/update.js -b -l -g",
-    "reinstall:docker": "node config/update.js -d -g",
-    "update:local": "node config/update.js -l",
-    "update:docker": "node config/update.js -d",
-    "update:single": "node config/update.js -s",
-    "update:sudo": "node config/update.js --sudo",
-    "update:deployed": "node config/deployed-update.js",
-    "rebase:deployed": "node config/deployed-update.js --rebase",
-    "start:deployed": "docker compose -f ./deploy-compose.yml up -d || docker-compose -f ./deploy-compose.yml up -d",
-    "stop:deployed": "docker compose -f ./deploy-compose.yml down || docker-compose -f ./deploy-compose.yml down",
-    "upgrade": "node config/upgrade.js",
     "create-user": "node config/create-user.js",
     "invite-user": "node config/invite-user.js",
     "list-users": "node config/list-users.js",
@@ -34,13 +28,14 @@
     "delete-user": "node config/delete-user.js",
     "update-banner": "node config/update-banner.js",
     "delete-banner": "node config/delete-banner.js",
+    "reset-terms": "node config/reset-terms.js",
     "backend": "cross-env NODE_ENV=production node api/server/index.js",
     "backend:dev": "cross-env NODE_ENV=development npx nodemon api/server/index.js",
     "backend:stop": "node config/stop-backend.js",
     "build:data-provider": "cd packages/data-provider && npm run build",
     "build:mcp": "cd packages/mcp && npm run build",
     "build:data-schemas": "cd packages/data-schemas && npm run build",
-    "frontend": "npm run build:data-provider && npm run build:mcp && npm run build:data-schemas && cd client && npm run build",
+    "frontend": "npm run build:packages && cd client && npm run build",
     "frontend:ci": "npm run build:data-provider && cd client && npm run build:ci",
     "frontend:dev": "cd client && npm run dev",
     "e2e": "playwright test --config=e2e/playwright.config.local.ts",
@@ -48,40 +43,22 @@
     "e2e:a11y": "playwright test --config=e2e/playwright.config.a11y.ts --headed",
     "e2e:ci": "playwright test --config=e2e/playwright.config.ts",
     "e2e:debug": "cross-env PWDEBUG=1 playwright test --config=e2e/playwright.config.local.ts",
-    "e2e:codegen": "npx playwright codegen --load-storage=e2e/storageState.json http://localhost:3080/c/new",
-    "e2e:login": "npx playwright codegen --save-storage=e2e/auth.json http://localhost:3080/login",
-    "e2e:github": "act -W .github/workflows/playwright.yml --secret-file my.secrets",
     "test:client": "cd client && npm run test:ci",
     "test:api": "cd api && npm run test:ci",
-    "e2e:update": "playwright test --config=e2e/playwright.config.js --update-snapshots",
-    "e2e:report": "npx playwright show-report e2e/playwright-report",
     "lint:fix": "eslint --fix \"{,!(node_modules|venv)/**/}*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"{,!(node_modules|venv)/**/}*.{js,jsx,ts,tsx}\"",
-    "format": "npx prettier --write \"{,!(node_modules|venv)/**/}*.{js,jsx,ts,tsx}\"",
-    "b:api": "NODE_ENV=production bun run api/server/index.js",
-    "b:api-inspect": "NODE_ENV=production bun --inspect run api/server/index.js",
-    "b:api:dev": "NODE_ENV=production bun run --watch api/server/index.js",
-    "b:data": "cd packages/data-provider && bun run b:build",
-    "b:mcp": "cd packages/mcp && bun run b:build",
-    "b:data-schemas": "cd packages/data-schemas && bun run b:build",
-    "b:client": "bun --bun run b:data && bun --bun run b:mcp && bun --bun run b:data-schemas && cd client && bun --bun run b:build",
-    "b:client:dev": "cd client && bun run b:dev",
-    "b:test:client": "cd client && bun run b:test",
-    "b:test:api": "cd api && bun run b:test",
-    "b:balance": "bun config/add-balance.js",
-    "b:list-balances": "bun config/list-balances.js",
-    "reset-terms": "node config/reset-terms.js"
+    "format": "npx prettier --write \"{,!(node_modules|venv)/**/}*.{js,jsx,ts,tsx}\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danny-avila/LibreChat.git"
+    "url": "git+https://github.com/lucanori/one-ring.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/danny-avila/LibreChat/issues"
+    "url": "https://github.com/lucanori/one-ring/issues"
   },
-  "homepage": "https://librechat.ai/",
+  "homepage": "https://one-ring.ai/",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
     "@eslint/compat": "^1.2.6",
@@ -90,6 +67,7 @@
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@playwright/test": "^1.50.1",
     "@types/react-virtualized": "^9.22.0",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "elliptic": "^6.6.1",
     "eslint": "^9.20.1",
